# shikou-lib

./: .gitignore  pyproject.toml
sk_lib/deploy/: __init__.py  fe_deploy.py
sk_lib/network/: __init__.py  ssh_tool.py
sk_lib/os_env/: linux.py  mac.py  windows.py
sk_lib/public/: enums.py
sk_lib/static/repo/centos9-aliyun/: centos-addons.repo  centos.repo
