[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shikou-lib"
version = "0.0.1"
description = "常用操作工具库"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["paramiko", "loguru"]

[project.urls]
Repository = "https://github.com/shikou-git/shikou-lib"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sk_lib*"]
